--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,15 @@ a {
 }
 
 
+body {
+
+    background-image: url('../assets/bimp.jpg');
+    background-size: cover; 
+    background-position: center center; 
+    background-repeat: no-repeat;
+}
+
+
 #information {
     height: 100vh;
     width: 100%;
@@ -73,6 +82,15 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+}
+
+header a {
+    color: black;
+    text-decoration: none; 
+}
+
+header a:hover {
+    color: rebeccapurple; 
 }
 
 section {
