--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
@@ -13,31 +13,29 @@
 
 <body>
     <header>
-        <header>
-            <div class="container-fluid">
-                <div class="row pt-3">
-                    <div class="col-2"></div>
-                    <div class="col-1">
-                    </div>
-                    <div class="col-6 d-lg-flex justify-content-evenly">
-                        <a href="/">Welcome</a>
-                        <a href="store.html">Store</a>
-                        <a href="Course.html">Course</a>
-                    </div>
-                    <div class="col-2 d-lg-flex justify-content-evenly pt-2">
-                        <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-instagram"></a>
-                        <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-facebook"></a>
-                        <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-twitter"></a>
-                        <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-skype"></a>
-                    </div>
+        <div class="container-fluid">
+            <div class="row pt-3">
+                <div class="col-2"></div>
+                <div class="col-1">
+                </div>
+                <div class="col-6 d-lg-flex justify-content-evenly">
+                    <a href="/goHome">Home Page</a>
+                    <a href="/">Calculator Page</a>
+
+                </div>
+                <div class="col-2 d-lg-flex justify-content-evenly pt-2">
+                    <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-instagram"></a>
+                    <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-facebook"></a>
+                    <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-twitter"></a>
+                    <a href="https://www.instagram.com/instagram/?hl=en" class="fa-brands fa-skype"></a>
                 </div>
             </div>
-        </header>
+        </div>
     </header>
 
     <section>
         <h2>BMI Calculator</h2>
-        <form action="/bmicalculator" method="post" class="row g-3">
+        <form action="/bmicalculator" method="post" class="row g-3" id="whyNot">
             <div class="col-md-6">
                 <label for="age">Age:</label>
                 <input type="number" name="age" class="form-control" required>
@@ -76,15 +74,18 @@
             </div>
         </form>
 
-        <!-- Display BMI result and interpretation -->
-        <div id="result-container" style="display: none;">
+
+        <div id="resultHere" style="display: none;">
             <h3>Your BMI Result:</h3>
-            <p id="bmi-result"></p>
-            <p id="interpretation"></p>
+            <h4 id="bmi-score"></h4>
+            <h4 id="description"></h4>
         </div>
     </section>
-
-    <script src="script/bmicalculator.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/b68baa7942.js" crossorigin="anonymous"></script>
+    <script src="/script/bmicalculator.js"></script>
 </body>
 
 </html>
